# bitbucket_issue_migration

./: .gitignore  .travis.yml  README.md  README.rst  bitbucket-migration.sublime-project  bitbucket_issues_on_hold.py  migrate.py  requirements-test.txt  requirements.pip  setup.cfg  setup.py  tox.ini
projects-tests/execnet/: repos.json  users.json
projects-tests/pylib/: repos.json  users.json
projects-tests/pypy/: repos.json  users.json
projects-tests/setuptools/: repos.json  users.json
projects-tests/tox/: repos.json  users.json
src/migrate_to_github/: bitbucket.py  cli.py  formating.py  github.py  json.py  store.py  usermap.py  usermap_tool.py  util.py
src/migrate_to_github/cli/: bulk.py  commands.py  singular.py  usermap.py
src/migrate_to_github/utils/: __init__.py  poster.py
testing/: conftest.py  test_rater.py  test_store.py  test_usermap.py
