[metadata]
name = migrate_bitbucket_to_github
author = Ronny Pfannschmidt
author-email = opensource@ronnypfannschmidt.de
requires-dist =
  six
  click
  attrs
  requests

[files]
packages_root=src
packages=
  migrate_to_github

[entry_points]
console_scripts =
  migrate_to_github = migrate_to_github.cli:main
