[metadata]
name = migrate_to_github
author = Ronny Pfannschmidt
author-email = opensource@ronnypfannschmidt.de
requires-dist =
  click
  requests
  attrs
  pathlib2

[files]
packages_root=src
packages=
  migrate_to_github
  

[entry_points]
console_scripts =
  migrate_to_github = migrate_to_github.cli:migrate_tool
  usermap_sync = migrate_to_github.cli:usermap_tool