[metadata]
name = migrate_to_github
author = Ronny Pfannschmidt
author-email = opensource@ronnypfannschmidt.de
requires-dist =
  click
  requests
  attrs
  pathlib2

[files]
packages_root=src
packages=
  migrate_to_github
  migrate_to_github.utils
  

[entry_points]
console_scripts =
  migrate_to_github = migrate_to_github.cli.singluar:main
  bulk_migrate = migrate_to_github.cli.bulk:main
  usermap_sync = migrate_to_github.cli.usermap:main